--- a/style.css
+++ b/style.css
@@ -246,7 +246,7 @@ body {
     width: 100%;
     height: 100%;
     background: linear-gradient(to bottom right, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.6));
-    z-index: 1;
+    /* z-index: 1; */
 }
 
 .home_img img {
